style.css
/* ... */
body {
    background: var(--bg-color);
    font-family: "Poppins", sans-serif;
    color: var(--text-color);
}

html::-webkit-scrollbar {
    width: 0.8rem;
}

html::-webkit-scrollbar-track {
    background: var(--bg-color);
}

html::-webkit-scrollbar-thumb {
    background: var(--main-color);
}

.header {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    padding: 3rem 9%;
    background: rgba(0, 0, 0, 0.7);
    filter: drop-shadow(10px);
    display: flex;
    justify-content: space-between;
    align-items: center;
    z-index: 100;
}

.logo {
    font-size: 3rem;
    color: var(--main-color);
    font-weight: 800;
    cursor: pointer;
    transition: 0.5s ease;
}

.logo:hover {
    transform: scale(1.1);
}

.navbar a {
    font-size: 1.8rem;
    color: var(--text-color);
    margin-left: 4rem;
    font-weight: 500;
    transition: 0.3s ease;
    border-bottom: 3px solid transparent;
}

.navbar a:hover,
.navbar a:active {
    color: var(--main-color);
    border-bottom: 3px solid var(--main-color);
}

#menu-icon {
    font-size: 3.6rem;
    color: var(--main-color);
    display: none;
}

@media (max-width:995px) {
    #menu-icon {
        display: block;
    }

    .navbar {
        position: absolute;
        top: absolute;
        right: 0;
        width: 40%;
        border-left: 3px solid var(--main-color);
        border-bottom: 3px solid var(--main-color);
        border-bottom-left-radius: 2rem;
        padding: 1rem 3%;
        background-color: var(--second-bg-color);
        border-top: 0.1rem solid rgba(0, 0, 0, 0.4);
        display: none;
    }

    .navbar.active {
        display: block;
    }

    .navbar a {
        display: block;
        font-size: 2rem;
        margin: 3rem 0;
    }

    .navbar a:hover,
    .navbar a.active {
        padding: 1rem;
        border-radius: 0.5rem;
        border-bottom: 0.5rem solid var(--main-color);
    }
}

section {
    min-height: 100vh;
    padding: 5rem 9% 5rem;
}

.home {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8rem;
    background: var(--bg-color);
}

.home .home-content h1 {
    font-size: 6rem;
    font-weight: 700;
    line-height: 1.3;
}

.home .home-content span {
    color: var(--main-color);
}

.home-content h3 {
    font-size: 4rem;
    margin-bottom: 1rem;
    font-weight: 700;
}

.home-img {
    border-radius: 50%;
}

.home-img img {
    position: relative;
    width: 32vw;
    border-radius: 50%;
    box-shadow: 0 0 25px var(--main-color);
    cursor: pointer;
}

.home-img img:hover {
    transform: scale(1.01);
    filter: drop-shadow(0 0 25px var(--main-color));
}

.home-content p {
    font-size: 1.8rem;
    font-weight: 500;
}

.social-icon a {
    display: inline-flex;
    justify-content: center;
    align-items: center;
    width: 4rem;
    height: 4rem;
    background: transparent;
    border: 0.2rem solid var(--main-color);
    font-size: 2rem;
    border-radius: 50%;
    color: var(--main-color);
    margin: 3rem 1.5rem 3rem 0;
    transition: 0.3s ease;
}

.social-icon a:hover {
    color: black;
    transform: scale(1.3)translateY(-5px);
    background: var(--main-color);
    box-shadow: 0 0 25px;
}

.btn {
    display: inline-block;
    padding: 1rem 2.8rem;
    background-color: var(--bg-color);
    /* background-color: #f44336; */
    border-radius: 4rem;
    font-size: 1.6rem;
    color: var(--main-color);
    /* color: #fff; */
    border: 2px solid var(--main-color);
    letter-spacing: 0.1rem;
    font-weight: 600;
    transition: 0.3s ease;
    cursor: pointer;
}

.btn:hover {
    transform: scale(1.03);
    background-color: var(--main-color);
    color: black;
    box-shadow: 0 0 25px var(--main-color);
}

.typing-text {
    /* border: 2px solid red; */
    font-size: 34px;
    font-weight: 600;
    min-width: 280px;
}

.typing-text span {
    position: relative;
}

.typing-text span::before {
    content: 'CS Student ! ';
    color: var(-- main-color);
    animation: words 20s infinite;
}

.typing-text span::after {
    content: '';
    background: var(--bg-color);
    position: absolute;
    width: calc(100% + 8px);
    height: 100%;
    border-left: 3px solid var(--bg-color);
    /* right: -8; */
    animation: cursor 0.6s infinite, typing 20s steps(14) infinite;

    width: 3px;
    right: 0;
    animation: cursor 0.6s infinite, typing 20s steps(14) infinite;
}

@keyframes cursor {

    0%,
    100% {
        border-left: 3px solid var(--main-color);
    }

    50% {
        border-left: 3px solid transparent;
    }
}

@keyframes words {

    0%,
    20% {
        content: 'CS Student ! ';
    }

    21%,
    40% {
        content: 'Software Developer ! ';
    }

    41%,
    60% {
        content: 'Full Stack Developer ! ';
    }

    61%,
    80% {
        content: 'Photographer ! ';
    }

    81%,
    100% {
        content: 'Web Developer ! ';
    }
}

@keyframes typing {

    10%,
    15%,
    30%,
    35%,
    50%,
    55%,
    70%,
    75%,
    90%,
    95% {
        width: 0;
    }

    5%,
    20%,
    25%,
    40%,
    45%,
    60%,
    65%,
    80%,
    85% {
        width: calc(100% + 8px);

    }

}

@media (max-width:1000px) {
    .home {
        gap: 4rem;
    }
}

@media (max-width:995px) {
    .home {
        flex-direction: column;
        margin: 5rem 4rem;
    }

    .home .home-content h3 {
        font-size: 2.5rem;
    }

    .home-content h1 {
        font-size: 5rem;
    }

    .home-img img {
        width: 70vw;
        margin-top: 4rem;
    }
}

/* service secction */
.service {
    background: var(--second-bg-color);
}

.heading {
    text-align: center;
    font-size: 4.5rem;
    font-weight: bolder;
    margin-bottom: 1rem;
}

.service-container {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    align-items: center;
    gap: 2.5rem;
}
/* ... */

